parser.output
Terminais sem uso na gramática

    TK_ERRO


Gramática

    0 $accept: programa $end

    1 programa: elementos
    2         | ε

    3 elementos: elementos elemento
    4          | elemento

    5 elemento: declaracoes_globais
    6         | definicao_funcao

    7 declaracoes_globais: declaracao_variaveis_globais

    8 declaracao_variaveis_globais: tipo lista_identificadores ';'

    9 tipo: TK_PR_INT
   10     | TK_PR_FLOAT
   11     | TK_PR_BOOL

   12 lista_identificadores: TK_IDENTIFICADOR
   13                      | lista_identificadores ',' TK_IDENTIFICADOR
   14                      | ε

   15 definicao_funcao: cabecalho_funcao corpo_funcao

   16 cabecalho_funcao: parametros TK_OC_GE tipo '!' TK_IDENTIFICADOR
   17                 | tipo '!' TK_IDENTIFICADOR TK_OC_GE tipo '!' TK_IDENTIFICADOR

   18 parametros: '(' lista_parametros ')'

   19 lista_parametros: parametro
   20                 | lista_parametros ',' parametro
   21                 | ε

   22 parametro: tipo TK_IDENTIFICADOR

   23 corpo_funcao: bloco_comandos

   24 comandos: comando
   25         | comandos comando

   26 comando: declaracao_variavel_local
   27        | atribuicao
   28        | condicao
   29        | repeticao
   30        | retorno
   31        | bloco_comandos
   32        | chamada_funcao_init

   33 declaracao_variavel_local: tipo lista_identificadores ';'

   34 atribuicao: TK_IDENTIFICADOR '=' expressao ';'

   35 condicao: TK_PR_IF '(' expressao ')' bloco_comandos
   36         | TK_PR_IF '(' expressao ')' bloco_comandos TK_PR_ELSE bloco_comandos

   37 repeticao: TK_PR_WHILE '(' expressao ')' bloco_comandos

   38 retorno: TK_PR_RETURN expressao ';'

   39 bloco_comandos: '{' comandos '}'
   40               | '{' '}'

   41 chamada_funcao_init: TK_IDENTIFICADOR '(' argumentos ')' ';'

   42 chamada_funcao: TK_IDENTIFICADOR '(' argumentos ')'

   43 argumentos: ε
   44           | expressao
   45           | argumentos ',' expressao

   46 expressao: prec7

   47 prec7: prec6
   48      | prec7 TK_OC_OR prec6

   49 prec6: prec5
   50      | prec6 TK_OC_AND prec5

   51 prec5: prec4
   52      | prec5 TK_OC_EQ prec4
   53      | prec5 TK_OC_NE prec4

   54 prec4: prec3
   55      | prec4 TK_OC_LE prec3
   56      | prec4 TK_OC_GE prec3
   57      | prec4 '<' prec3
   58      | prec4 '>' prec3

   59 prec3: prec2
   60      | prec3 '+' prec2
   61      | prec3 '-' prec2

   62 prec2: prec1
   63      | prec2 '*' prec1
   64      | prec2 '/' prec1
   65      | prec2 '%' prec1

   66 prec1: '-' prec1
   67      | '!' prec1
   68      | primario

   69 primario: '(' expressao ')'
   70         | TK_IDENTIFICADOR
   71         | literais
   72         | chamada_funcao

   73 literais: TK_LIT_INT
   74         | TK_LIT_FLOAT
   75         | TK_LIT_TRUE
   76         | TK_LIT_FALSE


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '!' (33) 16 17 67
    '%' (37) 65
    '(' (40) 18 35 36 37 41 42 69
    ')' (41) 18 35 36 37 41 42 69
    '*' (42) 63
    '+' (43) 60
    ',' (44) 13 20 45
    '-' (45) 61 66
    '/' (47) 64
    ';' (59) 8 33 34 38 41
    '<' (60) 57
    '=' (61) 34
    '>' (62) 58
    '{' (123) 39 40
    '}' (125) 39 40
    error (256)
    TK_PR_INT (258) 9
    TK_PR_FLOAT (259) 10
    TK_PR_BOOL (260) 11
    TK_PR_IF (261) 35 36
    TK_PR_ELSE (262) 36
    TK_PR_WHILE (263) 37
    TK_PR_RETURN (264) 38
    TK_OC_LE <v_lexico> (265) 55
    TK_OC_GE <v_lexico> (266) 16 17 56
    TK_OC_EQ <v_lexico> (267) 52
    TK_OC_NE <v_lexico> (268) 53
    TK_OC_AND <v_lexico> (269) 50
    TK_OC_OR <v_lexico> (270) 48
    TK_IDENTIFICADOR <v_lexico> (271) 12 13 16 17 22 34 41 42 70
    TK_LIT_INT <v_lexico> (272) 73
    TK_LIT_FLOAT <v_lexico> (273) 74
    TK_LIT_FALSE <v_lexico> (274) 76
    TK_LIT_TRUE <v_lexico> (275) 75
    TK_ERRO (276)


Não terminais com as regras onde eles aparecem

    $accept (37)
        à esquerda: 0
    programa <ast_no> (38)
        à esquerda: 1 2
        à direita: 0
    elementos (39)
        à esquerda: 3 4
        à direita: 1 3
    elemento (40)
        à esquerda: 5 6
        à direita: 3 4
    declaracoes_globais (41)
        à esquerda: 7
        à direita: 5
    declaracao_variaveis_globais (42)
        à esquerda: 8
        à direita: 7
    tipo (43)
        à esquerda: 9 10 11
        à direita: 8 16 17 22 33
    lista_identificadores (44)
        à esquerda: 12 13 14
        à direita: 8 13 33
    definicao_funcao (45)
        à esquerda: 15
        à direita: 6
    cabecalho_funcao (46)
        à esquerda: 16 17
        à direita: 15
    parametros (47)
        à esquerda: 18
        à direita: 16
    lista_parametros (48)
        à esquerda: 19 20 21
        à direita: 18 20
    parametro (49)
        à esquerda: 22
        à direita: 19 20
    corpo_funcao (50)
        à esquerda: 23
        à direita: 15
    comandos (51)
        à esquerda: 24 25
        à direita: 25 39
    comando (52)
        à esquerda: 26 27 28 29 30 31 32
        à direita: 24 25
    declaracao_variavel_local (53)
        à esquerda: 33
        à direita: 26
    atribuicao (54)
        à esquerda: 34
        à direita: 27
    condicao (55)
        à esquerda: 35 36
        à direita: 28
    repeticao (56)
        à esquerda: 37
        à direita: 29
    retorno (57)
        à esquerda: 38
        à direita: 30
    bloco_comandos (58)
        à esquerda: 39 40
        à direita: 23 31 35 36 37
    chamada_funcao_init (59)
        à esquerda: 41
        à direita: 32
    chamada_funcao (60)
        à esquerda: 42
        à direita: 72
    argumentos (61)
        à esquerda: 43 44 45
        à direita: 41 42 45
    expressao (62)
        à esquerda: 46
        à direita: 34 35 36 37 38 44 45 69
    prec7 (63)
        à esquerda: 47 48
        à direita: 46 48
    prec6 (64)
        à esquerda: 49 50
        à direita: 47 48 50
    prec5 (65)
        à esquerda: 51 52 53
        à direita: 49 50 52 53
    prec4 (66)
        à esquerda: 54 55 56 57 58
        à direita: 51 52 53 55 56 57 58
    prec3 (67)
        à esquerda: 59 60 61
        à direita: 54 55 56 57 58 60 61
    prec2 (68)
        à esquerda: 62 63 64 65
        à direita: 59 60 61 63 64 65
    prec1 (69)
        à esquerda: 66 67 68
        à direita: 62 63 64 65 66 67
    primario (70)
        à esquerda: 69 70 71 72
        à direita: 68
    literais <ast_no> (71)
        à esquerda: 73 74 75 76
        à direita: 71


Estado 0

    0 $accept: • programa $end

    TK_PR_INT    deslocar, e ir ao estado 1
    TK_PR_FLOAT  deslocar, e ir ao estado 2
    TK_PR_BOOL   deslocar, e ir ao estado 3
    '('          deslocar, e ir ao estado 4

    $padrão  reduzir usando a regra 2 (programa)

    programa                      ir ao estado 5
    elementos                     ir ao estado 6
    elemento                      ir ao estado 7
    declaracoes_globais           ir ao estado 8
    declaracao_variaveis_globais  ir ao estado 9
    tipo                          ir ao estado 10
    definicao_funcao              ir ao estado 11
    cabecalho_funcao              ir ao estado 12
    parametros                    ir ao estado 13


Estado 1

    9 tipo: TK_PR_INT •

    $padrão  reduzir usando a regra 9 (tipo)


Estado 2

   10 tipo: TK_PR_FLOAT •

    $padrão  reduzir usando a regra 10 (tipo)


Estado 3

   11 tipo: TK_PR_BOOL •

    $padrão  reduzir usando a regra 11 (tipo)


Estado 4

   18 parametros: '(' • lista_parametros ')'

    TK_PR_INT    deslocar, e ir ao estado 1
    TK_PR_FLOAT  deslocar, e ir ao estado 2
    TK_PR_BOOL   deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 21 (lista_parametros)

    tipo              ir ao estado 14
    lista_parametros  ir ao estado 15
    parametro         ir ao estado 16


Estado 5

    0 $accept: programa • $end

    $end  deslocar, e ir ao estado 17


Estado 6

    1 programa: elementos •
    3 elementos: elementos • elemento

    TK_PR_INT    deslocar, e ir ao estado 1
    TK_PR_FLOAT  deslocar, e ir ao estado 2
    TK_PR_BOOL   deslocar, e ir ao estado 3
    '('          deslocar, e ir ao estado 4

    $padrão  reduzir usando a regra 1 (programa)

    elemento                      ir ao estado 18
    declaracoes_globais           ir ao estado 8
    declaracao_variaveis_globais  ir ao estado 9
    tipo                          ir ao estado 10
    definicao_funcao              ir ao estado 11
    cabecalho_funcao              ir ao estado 12
    parametros                    ir ao estado 13


Estado 7

    4 elementos: elemento •

    $padrão  reduzir usando a regra 4 (elementos)


Estado 8

    5 elemento: declaracoes_globais •

    $padrão  reduzir usando a regra 5 (elemento)


Estado 9

    7 declaracoes_globais: declaracao_variaveis_globais •

    $padrão  reduzir usando a regra 7 (declaracoes_globais)


Estado 10

    8 declaracao_variaveis_globais: tipo • lista_identificadores ';'
   17 cabecalho_funcao: tipo • '!' TK_IDENTIFICADOR TK_OC_GE tipo '!' TK_IDENTIFICADOR

    TK_IDENTIFICADOR  deslocar, e ir ao estado 19
    '!'               deslocar, e ir ao estado 20

    $padrão  reduzir usando a regra 14 (lista_identificadores)

    lista_identificadores  ir ao estado 21


Estado 11

    6 elemento: definicao_funcao •

    $padrão  reduzir usando a regra 6 (elemento)


Estado 12

   15 definicao_funcao: cabecalho_funcao • corpo_funcao

    '{'  deslocar, e ir ao estado 22

    corpo_funcao    ir ao estado 23
    bloco_comandos  ir ao estado 24


Estado 13

   16 cabecalho_funcao: parametros • TK_OC_GE tipo '!' TK_IDENTIFICADOR

    TK_OC_GE  deslocar, e ir ao estado 25


Estado 14

   22 parametro: tipo • TK_IDENTIFICADOR

    TK_IDENTIFICADOR  deslocar, e ir ao estado 26


Estado 15

   18 parametros: '(' lista_parametros • ')'
   20 lista_parametros: lista_parametros • ',' parametro

    ','  deslocar, e ir ao estado 27
    ')'  deslocar, e ir ao estado 28


Estado 16

   19 lista_parametros: parametro •

    $padrão  reduzir usando a regra 19 (lista_parametros)


Estado 17

    0 $accept: programa $end •

    $padrão  aceitar


Estado 18

    3 elementos: elementos elemento •

    $padrão  reduzir usando a regra 3 (elementos)


Estado 19

   12 lista_identificadores: TK_IDENTIFICADOR •

    $padrão  reduzir usando a regra 12 (lista_identificadores)


Estado 20

   17 cabecalho_funcao: tipo '!' • TK_IDENTIFICADOR TK_OC_GE tipo '!' TK_IDENTIFICADOR

    TK_IDENTIFICADOR  deslocar, e ir ao estado 29


Estado 21

    8 declaracao_variaveis_globais: tipo lista_identificadores • ';'
   13 lista_identificadores: lista_identificadores • ',' TK_IDENTIFICADOR

    ';'  deslocar, e ir ao estado 30
    ','  deslocar, e ir ao estado 31


Estado 22

   39 bloco_comandos: '{' • comandos '}'
   40               | '{' • '}'

    TK_PR_INT         deslocar, e ir ao estado 1
    TK_PR_FLOAT       deslocar, e ir ao estado 2
    TK_PR_BOOL        deslocar, e ir ao estado 3
    TK_PR_IF          deslocar, e ir ao estado 32
    TK_PR_WHILE       deslocar, e ir ao estado 33
    TK_PR_RETURN      deslocar, e ir ao estado 34
    TK_IDENTIFICADOR  deslocar, e ir ao estado 35
    '{'               deslocar, e ir ao estado 22
    '}'               deslocar, e ir ao estado 36

    tipo                       ir ao estado 37
    comandos                   ir ao estado 38
    comando                    ir ao estado 39
    declaracao_variavel_local  ir ao estado 40
    atribuicao                 ir ao estado 41
    condicao                   ir ao estado 42
    repeticao                  ir ao estado 43
    retorno                    ir ao estado 44
    bloco_comandos             ir ao estado 45
    chamada_funcao_init        ir ao estado 46


Estado 23

   15 definicao_funcao: cabecalho_funcao corpo_funcao •

    $padrão  reduzir usando a regra 15 (definicao_funcao)


Estado 24

   23 corpo_funcao: bloco_comandos •

    $padrão  reduzir usando a regra 23 (corpo_funcao)


Estado 25

   16 cabecalho_funcao: parametros TK_OC_GE • tipo '!' TK_IDENTIFICADOR

    TK_PR_INT    deslocar, e ir ao estado 1
    TK_PR_FLOAT  deslocar, e ir ao estado 2
    TK_PR_BOOL   deslocar, e ir ao estado 3

    tipo  ir ao estado 47


Estado 26

   22 parametro: tipo TK_IDENTIFICADOR •

    $padrão  reduzir usando a regra 22 (parametro)


Estado 27

   20 lista_parametros: lista_parametros ',' • parametro

    TK_PR_INT    deslocar, e ir ao estado 1
    TK_PR_FLOAT  deslocar, e ir ao estado 2
    TK_PR_BOOL   deslocar, e ir ao estado 3

    tipo       ir ao estado 14
    parametro  ir ao estado 48


Estado 28

   18 parametros: '(' lista_parametros ')' •

    $padrão  reduzir usando a regra 18 (parametros)


Estado 29

   17 cabecalho_funcao: tipo '!' TK_IDENTIFICADOR • TK_OC_GE tipo '!' TK_IDENTIFICADOR

    TK_OC_GE  deslocar, e ir ao estado 49


Estado 30

    8 declaracao_variaveis_globais: tipo lista_identificadores ';' •

    $padrão  reduzir usando a regra 8 (declaracao_variaveis_globais)


Estado 31

   13 lista_identificadores: lista_identificadores ',' • TK_IDENTIFICADOR

    TK_IDENTIFICADOR  deslocar, e ir ao estado 50


Estado 32

   35 condicao: TK_PR_IF • '(' expressao ')' bloco_comandos
   36         | TK_PR_IF • '(' expressao ')' bloco_comandos TK_PR_ELSE bloco_comandos

    '('  deslocar, e ir ao estado 51


Estado 33

   37 repeticao: TK_PR_WHILE • '(' expressao ')' bloco_comandos

    '('  deslocar, e ir ao estado 52


Estado 34

   38 retorno: TK_PR_RETURN • expressao ';'

    TK_IDENTIFICADOR  deslocar, e ir ao estado 53
    TK_LIT_INT        deslocar, e ir ao estado 54
    TK_LIT_FLOAT      deslocar, e ir ao estado 55
    TK_LIT_FALSE      deslocar, e ir ao estado 56
    TK_LIT_TRUE       deslocar, e ir ao estado 57
    '!'               deslocar, e ir ao estado 58
    '('               deslocar, e ir ao estado 59
    '-'               deslocar, e ir ao estado 60

    chamada_funcao  ir ao estado 61
    expressao       ir ao estado 62
    prec7           ir ao estado 63
    prec6           ir ao estado 64
    prec5           ir ao estado 65
    prec4           ir ao estado 66
    prec3           ir ao estado 67
    prec2           ir ao estado 68
    prec1           ir ao estado 69
    primario        ir ao estado 70
    literais        ir ao estado 71


Estado 35

   34 atribuicao: TK_IDENTIFICADOR • '=' expressao ';'
   41 chamada_funcao_init: TK_IDENTIFICADOR • '(' argumentos ')' ';'

    '('  deslocar, e ir ao estado 72
    '='  deslocar, e ir ao estado 73


Estado 36

   40 bloco_comandos: '{' '}' •

    $padrão  reduzir usando a regra 40 (bloco_comandos)


Estado 37

   33 declaracao_variavel_local: tipo • lista_identificadores ';'

    TK_IDENTIFICADOR  deslocar, e ir ao estado 19

    $padrão  reduzir usando a regra 14 (lista_identificadores)

    lista_identificadores  ir ao estado 74


Estado 38

   25 comandos: comandos • comando
   39 bloco_comandos: '{' comandos • '}'

    TK_PR_INT         deslocar, e ir ao estado 1
    TK_PR_FLOAT       deslocar, e ir ao estado 2
    TK_PR_BOOL        deslocar, e ir ao estado 3
    TK_PR_IF          deslocar, e ir ao estado 32
    TK_PR_WHILE       deslocar, e ir ao estado 33
    TK_PR_RETURN      deslocar, e ir ao estado 34
    TK_IDENTIFICADOR  deslocar, e ir ao estado 35
    '{'               deslocar, e ir ao estado 22
    '}'               deslocar, e ir ao estado 75

    tipo                       ir ao estado 37
    comando                    ir ao estado 76
    declaracao_variavel_local  ir ao estado 40
    atribuicao                 ir ao estado 41
    condicao                   ir ao estado 42
    repeticao                  ir ao estado 43
    retorno                    ir ao estado 44
    bloco_comandos             ir ao estado 45
    chamada_funcao_init        ir ao estado 46


Estado 39

   24 comandos: comando •

    $padrão  reduzir usando a regra 24 (comandos)


Estado 40

   26 comando: declaracao_variavel_local •

    $padrão  reduzir usando a regra 26 (comando)


Estado 41

   27 comando: atribuicao •

    $padrão  reduzir usando a regra 27 (comando)


Estado 42

   28 comando: condicao •

    $padrão  reduzir usando a regra 28 (comando)


Estado 43

   29 comando: repeticao •

    $padrão  reduzir usando a regra 29 (comando)


Estado 44

   30 comando: retorno •

    $padrão  reduzir usando a regra 30 (comando)


Estado 45

   31 comando: bloco_comandos •

    $padrão  reduzir usando a regra 31 (comando)


Estado 46

   32 comando: chamada_funcao_init •

    $padrão  reduzir usando a regra 32 (comando)


Estado 47

   16 cabecalho_funcao: parametros TK_OC_GE tipo • '!' TK_IDENTIFICADOR

    '!'  deslocar, e ir ao estado 77


Estado 48

   20 lista_parametros: lista_parametros ',' parametro •

    $padrão  reduzir usando a regra 20 (lista_parametros)


Estado 49

   17 cabecalho_funcao: tipo '!' TK_IDENTIFICADOR TK_OC_GE • tipo '!' TK_IDENTIFICADOR

    TK_PR_INT    deslocar, e ir ao estado 1
    TK_PR_FLOAT  deslocar, e ir ao estado 2
    TK_PR_BOOL   deslocar, e ir ao estado 3

    tipo  ir ao estado 78


Estado 50

   13 lista_identificadores: lista_identificadores ',' TK_IDENTIFICADOR •

    $padrão  reduzir usando a regra 13 (lista_identificadores)


Estado 51

   35 condicao: TK_PR_IF '(' • expressao ')' bloco_comandos
   36         | TK_PR_IF '(' • expressao ')' bloco_comandos TK_PR_ELSE bloco_comandos

    TK_IDENTIFICADOR  deslocar, e ir ao estado 53
    TK_LIT_INT        deslocar, e ir ao estado 54
    TK_LIT_FLOAT      deslocar, e ir ao estado 55
    TK_LIT_FALSE      deslocar, e ir ao estado 56
    TK_LIT_TRUE       deslocar, e ir ao estado 57
    '!'               deslocar, e ir ao estado 58
    '('               deslocar, e ir ao estado 59
    '-'               deslocar, e ir ao estado 60

    chamada_funcao  ir ao estado 61
    expressao       ir ao estado 79
    prec7           ir ao estado 63
    prec6           ir ao estado 64
    prec5           ir ao estado 65
    prec4           ir ao estado 66
    prec3           ir ao estado 67
    prec2           ir ao estado 68
    prec1           ir ao estado 69
    primario        ir ao estado 70
    literais        ir ao estado 71


Estado 52

   37 repeticao: TK_PR_WHILE '(' • expressao ')' bloco_comandos

    TK_IDENTIFICADOR  deslocar, e ir ao estado 53
    TK_LIT_INT        deslocar, e ir ao estado 54
    TK_LIT_FLOAT      deslocar, e ir ao estado 55
    TK_LIT_FALSE      deslocar, e ir ao estado 56
    TK_LIT_TRUE       deslocar, e ir ao estado 57
    '!'               deslocar, e ir ao estado 58
    '('               deslocar, e ir ao estado 59
    '-'               deslocar, e ir ao estado 60

    chamada_funcao  ir ao estado 61
    expressao       ir ao estado 80
    prec7           ir ao estado 63
    prec6           ir ao estado 64
    prec5           ir ao estado 65
    prec4           ir ao estado 66
    prec3           ir ao estado 67
    prec2           ir ao estado 68
    prec1           ir ao estado 69
    primario        ir ao estado 70
    literais        ir ao estado 71


Estado 53

   42 chamada_funcao: TK_IDENTIFICADOR • '(' argumentos ')'
   70 primario: TK_IDENTIFICADOR •

    '('  deslocar, e ir ao estado 81

    $padrão  reduzir usando a regra 70 (primario)


Estado 54

   73 literais: TK_LIT_INT •

    $padrão  reduzir usando a regra 73 (literais)


Estado 55

   74 literais: TK_LIT_FLOAT •

    $padrão  reduzir usando a regra 74 (literais)


Estado 56

   76 literais: TK_LIT_FALSE •

    $padrão  reduzir usando a regra 76 (literais)


Estado 57

   75 literais: TK_LIT_TRUE •

    $padrão  reduzir usando a regra 75 (literais)


Estado 58

   67 prec1: '!' • prec1

    TK_IDENTIFICADOR  deslocar, e ir ao estado 53
    TK_LIT_INT        deslocar, e ir ao estado 54
    TK_LIT_FLOAT      deslocar, e ir ao estado 55
    TK_LIT_FALSE      deslocar, e ir ao estado 56
    TK_LIT_TRUE       deslocar, e ir ao estado 57
    '!'               deslocar, e ir ao estado 58
    '('               deslocar, e ir ao estado 59
    '-'               deslocar, e ir ao estado 60

    chamada_funcao  ir ao estado 61
    prec1           ir ao estado 82
    primario        ir ao estado 70
    literais        ir ao estado 71


Estado 59

   69 primario: '(' • expressao ')'

    TK_IDENTIFICADOR  deslocar, e ir ao estado 53
    TK_LIT_INT        deslocar, e ir ao estado 54
    TK_LIT_FLOAT      deslocar, e ir ao estado 55
    TK_LIT_FALSE      deslocar, e ir ao estado 56
    TK_LIT_TRUE       deslocar, e ir ao estado 57
    '!'               deslocar, e ir ao estado 58
    '('               deslocar, e ir ao estado 59
    '-'               deslocar, e ir ao estado 60

    chamada_funcao  ir ao estado 61
    expressao       ir ao estado 83
    prec7           ir ao estado 63
    prec6           ir ao estado 64
    prec5           ir ao estado 65
    prec4           ir ao estado 66
    prec3           ir ao estado 67
    prec2           ir ao estado 68
    prec1           ir ao estado 69
    primario        ir ao estado 70
    literais        ir ao estado 71


Estado 60

   66 prec1: '-' • prec1

    TK_IDENTIFICADOR  deslocar, e ir ao estado 53
    TK_LIT_INT        deslocar, e ir ao estado 54
    TK_LIT_FLOAT      deslocar, e ir ao estado 55
    TK_LIT_FALSE      deslocar, e ir ao estado 56
    TK_LIT_TRUE       deslocar, e ir ao estado 57
    '!'               deslocar, e ir ao estado 58
    '('               deslocar, e ir ao estado 59
    '-'               deslocar, e ir ao estado 60

    chamada_funcao  ir ao estado 61
    prec1           ir ao estado 84
    primario        ir ao estado 70
    literais        ir ao estado 71


Estado 61

   72 primario: chamada_funcao •

    $padrão  reduzir usando a regra 72 (primario)


Estado 62

   38 retorno: TK_PR_RETURN expressao • ';'

    ';'  deslocar, e ir ao estado 85


Estado 63

   46 expressao: prec7 •
   48 prec7: prec7 • TK_OC_OR prec6

    TK_OC_OR  deslocar, e ir ao estado 86

    $padrão  reduzir usando a regra 46 (expressao)


Estado 64

   47 prec7: prec6 •
   50 prec6: prec6 • TK_OC_AND prec5

    TK_OC_AND  deslocar, e ir ao estado 87

    $padrão  reduzir usando a regra 47 (prec7)


Estado 65

   49 prec6: prec5 •
   52 prec5: prec5 • TK_OC_EQ prec4
   53      | prec5 • TK_OC_NE prec4

    TK_OC_EQ  deslocar, e ir ao estado 88
    TK_OC_NE  deslocar, e ir ao estado 89

    $padrão  reduzir usando a regra 49 (prec6)


Estado 66
